welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:34: error: unclosed comment
/*estSurMessage():Boolean: renvoie true si et seulement s'il y a un message écrit par terre.
^BDRBuggle:2: error: Missing closing brace `}' assumed here
if (litMessage()=="R") {
^BDRBuggle:9: error: illegal start of declaration
		gauche();gauche();avance();
                ^BDRBuggle:9: error: illegal start of declaration
		gauche();gauche();avance();
                         ^BDRBuggle:9: error: illegal start of declaration
		gauche();gauche();avance();
                                  ^BDRBuggle:11: error: ')' expected but 'if' found.
	if (litMessage(): String :=A) {
        ^BDRBuggle:14: error: ';' expected but 'if' found.
	if (litMessage(): String :=B) {
        ^